Display username restrictions on registration

--- a/bemani/frontend/templates/account/register.html
+++ b/bemani/frontend/templates/account/register.html
@@ -11,7 +11,7 @@
                 <dd><input type="password" name="pin" /></dd>
                 <dt>&nbsp;</dt>
                 <dd></dd>
-                <dt>Desired Username</dt>
+                <dt>Desired Username (Alphanumeric + "_" only)</dt>
                 <dd><input type="text" name="username" value="{{ username }}" /></dd>
                 <dt>Email Address (used for password and pin resetting)</dt>
                 <dd><input type="text" name="email" value="{{ email }}" /></dd>
